fixed overflow left problem in contact book div
added padding left, so the contact book doesent flows left out of the window

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -413,6 +413,14 @@ button,
     #displaySelectedContacts-basic { margin-bottom: 32px; }
 }
 
+@media only screen and (max-width: 1200px) {
+    #overlay-contacts > div.bg-dark-blue { padding: 48px 24px; }
+
+    #overlay-contacts > div > div:first-of-type { padding: 32px; }
+
+    #overlay-contacts > div > div:last-of-type { padding: 32px 32px 32px 0; }
+}
+
 @media only screen and (min-width: 1100px) {
     #back-to-contacts {
         display: none;
@@ -422,12 +430,6 @@ button,
 @media only screen and (max-width: 1100px) {
     .greet,
     .addTask-btn { display: none; }
-
-    /* #detailed-contact-responsive {
-        position: absolute;
-        left: 0;
-
-    } */
     
     .search-section > div > img { opacity: 1; }
 
@@ -569,6 +571,8 @@ button,
         transform: rotate(90deg);
         margin-left: 30px;
     }
+
+    .contacts-div { min-width: unset; }
 }
 
 @media only screen and (max-width: 600px) {
@@ -649,6 +653,18 @@ button,
     .submit-section > button {
         display: flex;
         justify-content: center;
+    }
+
+    #contact-book > tr > div {
+        padding: 8px 16px;
+    }
+
+    #contact-book > tr > div > div {
+        gap: 24px;
+    }
+
+    #contact-book > tr > div > div > div {
+        padding: 8px;
     }
 
 }
@@ -739,4 +755,10 @@ button,
     div.priority > div img { width: 128px; }
 
     #body-add-tasks { overflow-x: hidden; }
+
+    .contacts-div { padding-left: 128px; }
+}
+
+@media only screen and (max-width: 350px) {
+    
 }
